--- a/gogol-cloudkms/gogol-cloudkms.cabal
+++ b/gogol-cloudkms/gogol-cloudkms.cabal
@@ -72,5 +72,5 @@ library
         , Network.Google.CloudKMS.Types.Sum
 
     build-depends:
-          gogol-core == 0.5.0.*
+          gogol-core
         , base       >= 4.7 && < 5
